fixbug: RESTful API code style
